initialize data base, install and create database for identity user

--- a/Blog_AP/appsettings.json
+++ b/Blog_AP/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //default connection string
+    //"ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=Blog_AP.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+
+    //nam connection string
+    "ApplicationDbContext": "Server=ADMIN\\SQLEXPRESS;Database=Blog_AP.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
